# nodeeditor

./: .clang-format  .gitignore  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  TODO.md  vcpkg.json
docs/: Doxyfile.in
examples/: CMakeLists.txt
examples/calculator/: AdditionModel.hxx  CMakeLists.txt  DecimalData.hxx  DivisionModel.hxx  MathOperationDataModel.cxx  MathOperationDataModel.hxx  MultiplicationModel.hxx  NumberDisplayDataModel.cxx  NumberDisplayDataModel.hxx  NumberSourceDataModel.cxx  NumberSourceDataModel.hxx  SubtractionModel.hxx  headless_main.cxx  main.cxx  scene.json
examples/connection_colors/: CMakeLists.txt  main.cxx  models.cxx  models.hxx
examples/dynamic_ports/: CMakeLists.txt  DynamicPortsModel.cxx  DynamicPortsModel.hxx  PortAddRemoveWidget.cxx  PortAddRemoveWidget.hxx  main.cxx
examples/lock_nodes_and_connections/: CMakeLists.txt  DataFlowModel.hxx  DelegateNodeModel.cxx  DelegateNodeModel.hxx  main.cxx
examples/resizable_images/: CMakeLists.txt  ImageLoaderModel.cxx  ImageLoaderModel.hxx  ImageShowModel.cxx  ImageShowModel.hxx  PixmapData.hxx  main.cxx
examples/simple_graph_model/: CMakeLists.txt  SimpleGraphModel.cxx  SimpleGraphModel.hpp  SimpleGraphModel.hxx  main.cpp  main.cxx
examples/styles/: CMakeLists.txt  main.cxx  models.hxx
examples/text/: CMakeLists.txt  TextData.hxx  TextDisplayDataModel.cxx  TextDisplayDataModel.hxx  TextSourceDataModel.cxx  TextSourceDataModel.hxx  main.cxx
examples/vertical_layout/: CMakeLists.txt  SimpleGraphModel.cxx  SimpleGraphModel.hxx  main.cxx
include/QtNodes/: AbstractGraphModel  AbstractGraphModel.hxx  AbstractNodeGeometry.hxx  AbstractNodePainter  AbstractNodePainter.hxx  BasicGraphicsScene  BasicGraphicsScene.hxx  ConnectionGraphicsObject.hxx  ConnectionIdHash.hxx  ConnectionIdUtils  ConnectionIdUtils.hxx  ConnectionPainter.hxx  ConnectionState.hxx  ConnectionStyle  ConnectionStyle.hxx  DataFlowGraphModel  DataFlowGraphModel.hxx  DataFlowGraphicsScene  DataFlowGraphicsScene.hxx  DefaultHorizontalNodeGeometry.hxx  DefaultNodePainter  DefaultNodePainter.hxx  DefaultVerticalNodeGeometry.hxx  Definitions  Definitions.hxx  Export.hxx  GraphicsView  GraphicsView.hxx  GraphicsViewStyle  GraphicsViewStyle.hxx  NodeConnectionInteraction.hxx  NodeData  NodeData.hxx  NodeDelegateModel  NodeDelegateModel.hxx  NodeDelegateModelRegistry  NodeDelegateModelRegistry.hxx  NodeGeometry  NodeGraphicsObject.hxx  NodeState  (+12 more)
include/QtNodes/internal/: AbstractGraphModel.hpp  AbstractGraphModel.hxx  AbstractNodeGeometry.hxx  AbstractNodePainter.hxx  BasicGraphicsScene.hpp  BasicGraphicsScene.hxx  Compiler.hxx  ConnectionGraphicsObject.hxx  ConnectionIdHash.hxx  ConnectionIdUtils.hxx  ConnectionState.hxx  ConnectionStyle.hxx  DataFlowGraphModel.hpp  DataFlowGraphModel.hxx  DataFlowGraphicsScene.hxx  DefaultNodePainter.hxx  Definitions.hpp  Definitions.hxx  Export.hxx  GraphicsView.hxx  GraphicsViewStyle.hxx  NodeData.hxx  NodeDelegateModel.hxx  NodeDelegateModelRegistry.hxx  NodeGraphicsObject.hxx  NodeState.hxx  NodeStyle.hxx  OperatingSystem.hxx  QStringStdHash.hxx  QUuidStdHash.hxx  Serializable.hxx  Style.hxx  StyleCollection.hpp  StyleCollection.hxx  locateNode.hxx
resources/: DefaultStyle.json
src/: AbstractGraphModel.cpp  AbstractGraphModel.cxx  AbstractNodeGeometry.cxx  BasicGraphicsScene.cpp  BasicGraphicsScene.cxx  ConnectionGraphicsObject.cxx  ConnectionPainter.cxx  ConnectionPainter.hxx  ConnectionState.cxx  ConnectionStyle.cxx  DataFlowGraphModel.cpp  DataFlowGraphModel.cxx  DataFlowGraphicsScene.cxx  DefaultHorizontalNodeGeometry.cxx  DefaultHorizontalNodeGeometry.hxx  DefaultNodePainter.cxx  DefaultVerticalNodeGeometry.cxx  DefaultVerticalNodeGeometry.hxx  Definitions.cxx  GraphicsView.cxx  GraphicsViewStyle.cxx  NodeConnectionInteraction.cxx  NodeConnectionInteraction.hxx  NodeDelegateModel.cxx  NodeDelegateModelRegistry.cxx  NodeGraphicsObject.cxx  NodeState.cxx  NodeStyle.cxx  StyleCollection.cpp  StyleCollection.cxx  UndoCommands.cpp  UndoCommands.cxx  UndoCommands.hpp  UndoCommands.hxx  locateNode.cxx
test/: CMakeLists.txt
test/include/: ApplicationSetup.hxx  Stringify.hxx  StubNodeDataModel.hxx
test/src/: TestDataModelRegistry.cxx  TestDragging.cxx  TestFlowScene.cxx  TestNodeGraphicsObject.cxx
uml/class/: class.plantuml
